docs/style.css
---
---

.student_pictures {
    display: flex;
    justify-content: center;
  }
  
  .student_pictures figure {

    margin-right: 50px; /* Adjust spacing between images */
  }

  .student_pictures figcaption {
    justify-content: center;
  }
  .student_pictures img{
    width: 200px; /* Adjust the width as needed */
    height: 200px; /* Maintain aspect ratio */
  }

